--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   injectable_generator: ^2.6.2
   path_provider: ^2.1.5
   flutter_lints: ^5.0.0
+  mockito: ^5.4.4
 
 dev_dependencies:
   flutter_test:
