--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.1.5
   flutter_lints: ^5.0.0
   mockito: ^5.4.4
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
