--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_lints: ^5.0.0
   mockito: ^5.4.4
   cached_network_image: ^3.4.1
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
