--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,8 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+		<!-- For Face ID, biometrics-->
+	<key>NSFaceIDUsageDescription</key>
+	<string>We need Face ID for authentication</string>
 </dict>
 </plist>
